[package]
name = "solve"
version = "0.1.0"
authors = ["cosine <trash@cosine.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["approx"] }
approx = "0.3.2"
lazy_static = "1.4.0"
rayon = "1.3.0"
